Add token to .env

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ export DB_USER=postgres
 export DB_PASSWORD=example
 export DB_DATABASE=postgres
 export DB_PORT=5432
+
+export TOKEN=your-discord-bot-token-here
