--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "discord.js": "^14.17.2",
+    "pg": "^8.13.1"
   }
 }
