Add application and guild id to environment

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ export DB_DATABASE=postgres
 export DB_PORT=5432
 
 export TOKEN=your-discord-bot-token-here
+export APPLICATION_ID=your-application-id-here
+export GUILD_ID=your-developement-server-id-here
