--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "MIT",
   "author": "YeetlePrime",
   "type": "module",
-  "main": "src/bot.js",
+  "main": "build/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p ."
   },
   "dependencies": {
     "discord.js": "^14.17.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "ts-postgres": "^2.0.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
   }
 }
