--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "author": "YeetlePrime",
-  "type": "module",
+  "type": "commonjs",
   "main": "build/bot.js",
   "scripts": {
     "build": "tsc -p ."
@@ -22,6 +22,7 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.10",
     "typescript": "^5.7.3"
   }
 }
