--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "discord.js": "^14.17.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "rosetta": "^1.1.0"
   },
   "devDependencies": {
     "@types/pg": "^8.11.10",
