--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -32,3 +32,8 @@ services:
       interval: 1s
       timeout: 5s
       retries: 10
+    volumes:
+      - db:/var/lib/postgresql/data
+
+volumes:
+  db:
