--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-export TIMEZONE=europe/berlin
+TIMEZONE=europe/berlin
 
-export DB_USER=postgres
-export DB_PASSWORD=example
-export DB_DATABASE=postgres
-export DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=example
+DB_DATABASE=postgres
+DB_PORT=5432
 
-export TOKEN=your-discord-bot-token-here
-export APPLICATION_ID=your-application-id-here
-export GUILD_ID=your-developement-server-id-here
+TOKEN=your-discord-bot-token-here
+APPLICATION_ID=your-application-id-here
+GUILD_ID=your-developement-server-id-here
